<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <data>
        <variable
            name="viewModel"
            type="com.weiyung.intotheforest.user.UserViewModel" />
        <variable
            name="user"
            type="com.weiyung.intotheforest.database.User" />
        <variable
            name="userManager"
            type="com.weiyung.intotheforest.util.UserManager" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/lottie_green_100"
        tools:context="com.weiyung.intotheforest.user.UserFragment">

        <View
            android:id="@+id/user_view"
            android:layout_width="0dp"
            android:layout_height="130dp"
            android:background="@color/lottie_green_200"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/user_photo"
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:contentDescription="@string/userPhoto"
            app:avatarUrl="@{user.picture}"
            app:layout_constraintBottom_toBottomOf="@+id/user_view"
            app:layout_constraintStart_toStartOf="@+id/bt_my_articles"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="ImageContrastCheck"
            tools:srcCompat="@drawable/outline_account_circle_black_36" />

        <TextView
            android:id="@+id/username"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/black_3f3a3a"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@+id/user_photo"
            app:layout_constraintStart_toStartOf="@+id/bt_my_favorites"
            app:layout_constraintTop_toTopOf="@+id/user_photo"
            tools:text="王小明" />
        <!--        android:text="@{userManager.addUserInfo().name}"-->

        <Button
            android:id="@+id/bt_my_articles"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="21dp"
            android:background="@drawable/bg_round_user_button"
            android:text="@string/myArticlesButton"
            android:textAlignment="center"
            android:textColor="@color/black_3f3a3a"
            android:textSize="16sp"
            app:layout_constraintEnd_toStartOf="@+id/bt_my_favorites"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/user_view"
            tools:ignore="TextContrastCheck" />

        <Button
            android:id="@+id/bt_my_favorites"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_round_user_button"
            android:text="@string/myFavoritesButton"
            android:textAlignment="center"
            android:textColor="@color/black_3f3a3a"
            android:textSize="16sp"
            app:layout_constraintEnd_toStartOf="@+id/bt_my_photos"
            app:layout_constraintStart_toEndOf="@+id/bt_my_articles"
            app:layout_constraintTop_toTopOf="@+id/bt_my_articles"
            tools:ignore="TextContrastCheck" />

        <Button
            android:id="@+id/bt_my_photos"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_round_user_button"
            android:text="@string/myPhotosButton"
            android:textAlignment="center"
            android:textColor="@color/black_3f3a3a"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/bt_my_favorites"
            app:layout_constraintTop_toTopOf="@+id/bt_my_articles"
            tools:ignore="TextContrastCheck" />

        <Button
            android:id="@+id/bt_my_badges"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="21dp"
            android:background="@drawable/bg_round_user_button"
            android:text="@string/myBadgesButton"
            android:textAlignment="center"
            android:textColor="@color/black_3f3a3a"
            android:textSize="16sp"
            app:layout_constraintEnd_toStartOf="@+id/bt_notifications"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/bt_my_articles"
            tools:ignore="TextContrastCheck" />

        <Button
            android:id="@+id/bt_edit_person_info"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_round_user_button"
            android:text="@string/editPersonInfo"
            android:textAlignment="center"
            android:textColor="@color/black_3f3a3a"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/bt_notifications"
            app:layout_constraintTop_toTopOf="@+id/bt_my_badges"
            tools:ignore="TextContrastCheck" />

        <Button
            android:id="@+id/bt_notifications"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_round_user_button"
            android:text="@string/NotificationsButton"
            android:textAlignment="center"
            android:textColor="@color/black_3f3a3a"
            android:textSize="16sp"
            app:layout_constraintEnd_toStartOf="@+id/bt_edit_person_info"
            app:layout_constraintStart_toEndOf="@+id/bt_my_badges"
            app:layout_constraintTop_toTopOf="@+id/bt_my_badges"
            tools:ignore="TextContrastCheck" />

        <Button
            android:id="@+id/bt_my_routes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_round_user_button"
            android:text="@string/myRoutesButton"
            android:textAlignment="center"
            android:textColor="@color/black_3f3a3a"
            android:textSize="16sp"
            app:layout_constraintEnd_toStartOf="@+id/bt_checklist"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/bt_logout"
            app:layout_constraintTop_toTopOf="@+id/bt_logout"
            tools:ignore="TextContrastCheck" />

        <Button
            android:id="@+id/bt_checklist"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_round_user_button"
            android:text="@string/checklistButton"
            android:textAlignment="center"
            android:textColor="@color/black_3f3a3a"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/bt_my_routes"
            app:layout_constraintTop_toTopOf="@+id/bt_my_routes"
            tools:ignore="TextContrastCheck" />

        <Button
            android:id="@+id/bt_logout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="21dp"
            android:background="@drawable/bg_round_user_button"
            android:text="@string/logoutButton"
            android:textAlignment="center"
            android:textColor="@color/black_3f3a3a"
            android:textSize="16sp"
            app:layout_constraintEnd_toStartOf="@+id/bt_my_routes"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/bt_my_badges"
            tools:ignore="TextContrastCheck" />

        <com.airbnb.lottie.LottieAnimationView
            android:id="@+id/lottieMountainBirds"
            android:layout_width="0dp"
            android:layout_height="400dp"
            android:layout_marginTop="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/bt_my_routes"
            app:lottie_rawRes="@raw/mountain_birds_fly" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>