<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="viewModel"
            type="com.weiyung.intotheforest.addarticle.AddArticleViewModel" />
        <import type="com.weiyung.intotheforest.network.LoadApiStatus"/>
        <import type="android.view.View"/>
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0"
            tools:ignore="SpeakableTextPresentCheck">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/addStartDate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="24dp"
                    android:fontFamily="@font/noto_sans"
                    android:text="@string/addStartDate"
                    android:textColor="@color/black_3f3a3a"
                    android:textSize="16sp"
                    app:layout_constraintBottom_toBottomOf="@+id/chooseStartButton"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="@+id/chooseStartButton" />

                <TextView
                    android:id="@+id/addEndDate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="24dp"
                    android:fontFamily="@font/noto_sans"
                    android:text="@string/addEndDate"
                    android:textColor="@color/black_3f3a3a"
                    android:textSize="16sp"
                    app:layout_constraintBottom_toBottomOf="@+id/chooseEndDateButton"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="@+id/chooseEndDateButton" />

                <TextView
                    android:id="@+id/addTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="24dp"
                    android:fontFamily="@font/noto_sans"
                    android:text="@string/addTitle"
                    android:textColor="@color/black_3f3a3a"
                    android:textSize="16sp"
                    app:layout_constraintBottom_toBottomOf="@+id/inputTitle"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="@+id/inputTitle" />

                <TextView
                    android:id="@+id/addStory"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="24dp"
                    android:fontFamily="@font/noto_sans"
                    android:text="@string/addStory"
                    android:textColor="@color/black_3f3a3a"
                    android:textSize="16sp"
                    app:layout_constraintBottom_toBottomOf="@+id/inputStory"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="@+id/inputStory" />

                <TextView
                    android:id="@+id/addPhoto"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="24dp"
                    android:layout_marginTop="32dp"
                    android:fontFamily="@font/noto_sans"
                    android:text="@string/addPhoto"
                    android:textColor="@color/black_3f3a3a"
                    android:textSize="16sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/inputStory" />

                <ImageButton
                    android:id="@+id/chooseStartButton"
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:layout_marginTop="24dp"
                    android:layout_marginEnd="24dp"
                    android:background="@drawable/click_button"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:srcCompat="@drawable/outline_today_black_36"
                    tools:ignore="SpeakableTextPresentCheck" />

                <ImageButton
                    android:id="@+id/chooseEndDateButton"
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="24dp"
                    android:background="@drawable/click_button"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/chooseStartButton"
                    app:srcCompat="@drawable/outline_event_black_36"
                    tools:ignore="SpeakableTextPresentCheck" />

                <TextView
                    android:id="@+id/showStartDate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:fontFamily="@font/noto_sans"
                    android:text="@={viewModel.article.startDate}"
                    android:textSize="16sp"
                    app:layout_constraintBottom_toBottomOf="@+id/chooseStartButton"
                    app:layout_constraintEnd_toStartOf="@+id/chooseStartButton"
                    app:layout_constraintStart_toEndOf="@+id/addStartDate"
                    app:layout_constraintTop_toTopOf="@+id/chooseStartButton"
                    tools:ignore="TextContrastCheck" />

                <TextView
                    android:id="@+id/showEndDate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:fontFamily="@font/noto_sans"
                    android:text="@={viewModel.article.endDate}"
                    android:textSize="16sp"
                    app:layout_constraintBottom_toBottomOf="@+id/chooseEndDateButton"
                    app:layout_constraintEnd_toStartOf="@+id/chooseEndDateButton"
                    app:layout_constraintStart_toEndOf="@+id/addEndDate"
                    app:layout_constraintTop_toTopOf="@+id/chooseEndDateButton"
                    tools:ignore="TextContrastCheck,TextContrastCheck" />

                <EditText
                    android:id="@+id/inputTitle"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="24dp"
                    android:ems="10"
                    android:hint="@string/inputTitle"
                    android:inputType="textPersonName"
                    android:minHeight="48dp"
                    android:text="@={viewModel.article.title}"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/addTitle"
                    app:layout_constraintTop_toBottomOf="@+id/chooseEndDateButton" />

                <EditText
                    android:id="@+id/inputStory"
                    android:layout_width="0dp"
                    android:layout_height="180dp"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="24dp"
                    android:ellipsize="end"
                    android:ems="10"
                    android:hint="@string/inputStory"
                    android:inputType="textMultiLine"
                    android:minHeight="48dp"
                    android:singleLine="false"
                    android:text="@={viewModel.article.story}"
                    android:textIsSelectable="true"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/addStory"
                    app:layout_constraintTop_toBottomOf="@+id/inputTitle" />

                <ImageButton
                    android:id="@+id/inputPhotoButton"
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:layout_marginTop="16dp"
                    android:background="@drawable/click_button"
                    android:contentDescription="@string/inputPhotoButton"
                    app:layout_constraintEnd_toEndOf="@+id/addPhoto"
                    app:layout_constraintStart_toStartOf="@+id/addPhoto"
                    app:layout_constraintTop_toBottomOf="@+id/addPhoto"
                    app:srcCompat="@drawable/outline_add_photo_alternate_black_36"
                    tools:ignore="SpeakableTextPresentCheck" />

                <Button
                    android:id="@+id/addPostButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="100dp"
                    android:layout_marginBottom="24dp"
                    android:background="@drawable/bg_round_button"
                    android:fontFamily="@font/noto_sans"
                    android:text="@string/addPostButton"
                    android:textColor="@color/white"
                    android:textSize="16sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/pickImg1" />
                <!--                android:onClick="@{() -> viewModel.addData(viewModel.article)}"-->
                <!--                android:clickable="@{viewModel.status == LoadApiStatus.LOADING ? false : true}"-->

                <ImageView
                    android:id="@+id/pickImg1"
                    android:layout_width="90dp"
                    android:layout_height="90dp"
                    android:layout_marginEnd="8dp"
                    app:layout_constraintEnd_toStartOf="@+id/pickImg2"
                    app:layout_constraintTop_toTopOf="@+id/pickImg3"
                    tools:srcCompat="@tools:sample/backgrounds/scenic" />

                <ImageView
                    android:id="@+id/pickImg2"
                    android:layout_width="90dp"
                    android:layout_height="90dp"
                    android:layout_marginEnd="8dp"
                    app:layout_constraintEnd_toStartOf="@+id/pickImg3"
                    app:layout_constraintTop_toTopOf="@+id/pickImg3"
                    tools:srcCompat="@tools:sample/backgrounds/scenic" />

                <ImageView
                    android:id="@+id/pickImg3"
                    android:layout_width="90dp"
                    android:layout_height="90dp"
                    android:layout_marginTop="16dp"
                    app:layout_constraintEnd_toEndOf="@+id/inputStory"
                    app:layout_constraintTop_toBottomOf="@+id/inputStory"
                    tools:srcCompat="@tools:sample/backgrounds/scenic" />

                <ProgressBar
                    android:id="@+id/progressBar2"
                    style="?android:attr/progressBarStyle"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_marginTop="16dp"
                    app:layout_constraintEnd_toEndOf="@+id/inputPhotoButton"
                    app:layout_constraintStart_toStartOf="@+id/inputPhotoButton"
                    app:layout_constraintTop_toBottomOf="@+id/inputPhotoButton" />

                <TextView
                    android:id="@+id/articleImg"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@{viewModel.article.mainImage}"
                    app:layout_constraintEnd_toStartOf="@+id/pickImg1"
                    app:layout_constraintTop_toTopOf="@+id/pickImg1" />

            </androidx.constraintlayout.widget.ConstraintLayout>
        </ScrollView>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>