<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <data>
        <import type="android.view.View"/>
        <variable name="imageUrl" type="String"/>
        <variable
            name="article"
            type="com.weiyung.intotheforest.database.Article" />
        <variable
            name="user"
            type="com.weiyung.intotheforest.database.User" />
        <variable
            name="viewModel"
            type="com.weiyung.intotheforest.favorite.FavoriteViewModel" />

    </data>
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/article_image"
            android:layout_width="96dp"
            android:layout_height="96dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="12dp"
            android:layout_marginBottom="12dp"
            android:contentDescription="@string/articleImage"
            android:scaleType="centerCrop"
            app:roundedCorners="@{article.mainImage}"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="ImageContrastCheck"
            tools:srcCompat="@tools:sample/backgrounds/scenic" />

        <TextView
            android:id="@+id/home_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:fontFamily="@font/noto_sans"
            android:text="@{article.title}"
            android:textSize="16sp"
            android:textColor="@color/black_3f3a3a"
            app:layout_constraintStart_toEndOf="@+id/article_image"
            app:layout_constraintTop_toBottomOf="@+id/startDate"
            tools:text="七星山兩日遊" />

        <TextView
            android:id="@+id/home_author"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:fontFamily="@font/noto_sans"
            android:text="@{article.user.name}"
            android:textSize="16sp"
            android:textColor="@color/black_3f3a3a"
            app:layout_constraintStart_toEndOf="@+id/article_image"
            app:layout_constraintTop_toBottomOf="@+id/home_title"
            tools:text="專欄作者" />

        <TextView
            android:id="@+id/startDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:fontFamily="@font/noto_sans"
            android:text="@{article.startDate}"
            android:textSize="16sp"
            android:textColor="@color/black_3f3a3a"
            app:layout_constraintStart_toEndOf="@+id/article_image"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="2021.10.10" />

        <TextView
            android:id="@+id/endDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:fontFamily="@font/noto_sans"
            android:text="@{article.endDate}"
            android:textSize="16sp"
            android:textColor="@color/black_3f3a3a"
            app:layout_constraintStart_toEndOf="@+id/to"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="2021.10.11" />

        <TextView
            android:id="@+id/to"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:fontFamily="@font/noto_sans"
            android:text="@string/to"
            android:textSize="16sp"
            android:textColor="@color/black_3f3a3a"
            app:layout_constraintStart_toEndOf="@+id/startDate"
            app:layout_constraintTop_toTopOf="parent" />

<!--        <ImageButton-->
<!--            android:id="@+id/delete_button"-->
<!--            android:layout_width="48dp"-->
<!--            android:layout_height="48dp"-->
<!--            android:layout_marginTop="8dp"-->
<!--            android:layout_marginEnd="16dp"-->
<!--            android:backgroundTint="@color/transparent"-->
<!--            app:layout_constraintEnd_toEndOf="parent"-->
<!--            app:layout_constraintTop_toTopOf="parent"-->
<!--            app:srcCompat="@drawable/outline_delete_black_24"-->
<!--            tools:ignore="SpeakableTextPresentCheck" />-->

        <ImageButton
            android:id="@+id/toDetailButton"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_marginEnd="16dp"
            android:backgroundTint="@color/transparent"
            android:contentDescription="@string/toDetailButton"
            android:onClick="@{() -> viewModel.toDetail(article)}"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/outline_info_black_24"
            tools:ignore="SpeakableTextPresentCheck" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>